force-app/main/default/objects/User/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Área</label>
    <length>255</length>
    <type>Text</type>
</CustomField>