force-app/main/default/objects/User/fields/N_Certificado_P_liza_Vida__c.field-meta.xml
<CustomField>
    <fullName>N_Certificado_P_liza_Vida__c</fullName>
    <label>N° Certificado Póliza Vida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>