force-app/main/default/objects/User/fields/N_Certificado_Poliza_Accidentes__c.field-meta.xml
<CustomField>
    <fullName>N_Certificado_Poliza_Accidentes__c</fullName>
    <label>N° Certificado Póliza Accidentes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>