force-app/main/default/objects/User/fields/NSS__c.field-meta.xml
<CustomField>
    <fullName>NSS__c</fullName>
    <label>NSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>