force-app/main/default/objects/User/fields/Tipo_de_sangre__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_sangre__c</fullName>
    <label>Tipo de sangre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>